crates/tokmd-format/tests/snapshots/snapshots__diff_md_ansi_color.snap
---
source: crates/tokmd-format/tests/snapshots.rs
expression: md
---
## Diff: v1.0.0 → v2.0.0

### Summary

|Metric|From|To|Delta|Change|
|---|---:|---:|---:|---:|
|LOC|700|750|[32m+50[0m|[32m+7.1%[0m|
|Lines|840|900|[32m+60[0m|[32m+7.1%[0m|
|Files|8|10|[32m+2[0m|[32m+25.0%[0m|
|Bytes|33000|37500|[32m+4500[0m|[32m+13.6%[0m|
|Tokens|1750|1875|[32m+125[0m|[32m+7.1%[0m|

### Language Movement

|Type|Count|
|---|---:|
|Changed|3|
|Added|1|
|Removed|1|
|Modified|1|

### Language Breakdown

|Language|Old LOC|New LOC|Delta|
|---|---:|---:|---:|
|Go|200|0|[31m-200[0m|
|Python|0|150|[32m+150[0m|
|Rust|500|600|[32m+100[0m|
|**Total**|700|750|[32m+50[0m|
