crates/tokmd-format/tests/snapshots/snapshots__export_json_with_meta.snap
---
source: crates/tokmd-format/tests/snapshots.rs
expression: pretty
---
{
  "args": {
    "children": "separate",
    "format": "json",
    "max_rows": 0,
    "min_code": 0,
    "module_depth": 1,
    "module_roots": [
      "src",
      "tests"
    ],
    "redact": "none",
    "strip_prefix": null
  },
  "children": "separate",
  "generated_at_ms": 0,
  "mode": "export",
  "module_depth": 1,
  "module_roots": [
    "src",
    "tests"
  ],
  "rows": [
    {
      "blanks": 10,
      "bytes": 1000,
      "code": 100,
      "comments": 20,
      "kind": "parent",
      "lang": "Rust",
      "lines": 130,
      "module": "src",
      "path": "src/lib.rs",
      "tokens": 250
    },
    {
      "blanks": 5,
      "bytes": 600,
      "code": 60,
      "comments": 5,
      "kind": "parent",
      "lang": "Rust",
      "lines": 70,
      "module": "src",
      "path": "src/util.rs",
      "tokens": 150
    },
    {
      "blanks": 3,
      "bytes": 400,
      "code": 40,
      "comments": 2,
      "kind": "parent",
      "lang": "Rust",
      "lines": 45,
      "module": "tests",
      "path": "tests/smoke.rs",
      "tokens": 100
    }
  ],
  "scan": {
    "config": "auto",
    "excluded": [],
    "hidden": false,
    "no_ignore": false,
    "no_ignore_dot": false,
    "no_ignore_parent": false,
    "no_ignore_vcs": false,
    "paths": [
      "."
    ],
    "treat_doc_strings_as_comments": false
  },
  "schema_version": 2,
  "status": "complete",
  "tool": {
    "name": "tokmd",
    "version": "0.0.0"
  },
  "warnings": []
}
