crates/tokmd-format/tests/snapshots/snapshots__export_jsonl_single_file.snap
---
source: crates/tokmd-format/tests/snapshots.rs
assertion_line: 972
expression: output
---
{"type":"row","path":"main.rs","module":".","lang":"Rust","kind":"parent","code":42,"comments":5,"blanks":3,"lines":50,"bytes":500,"tokens":100}
